--- a/toDo
+++ b/toDo
@@ -4,6 +4,15 @@ find how to make increasingly fast glitching animations
 find a decent slenderman
 fill with content
 make puzzles
-
+SOUNDS (╯°□°)╯︵ ┻━┻ 
 
 if all fails use video
+
+interesting examples:
+https://codepen.io/jh3y/pen/jOOQjYP
+https://codepen.io/sqdge/pen/jONXVMV
+https://codepen.io/Ekut9119/pen/zJyLJo <image glitch
+https://codepen.io/lgrqvst/pen/VgvNrG
+https://codepen.io/pgalor/pen/OeRWJQ
+https://codepen.io/blazicke/pen/dQjxMr
+https://photomosh.com/ <if all fails
